# osint-swift

./: Project_porposal.md  sprint1.md
SWIFT/: .env.example  .gitignore  DATA_SOURCES.md  QUICKSTART.md  README.md  SPRINT1_SUMMARY.md  VERIFICATION.md  docker-compose.yml  setup.ps1  setup.sh
SWIFT/swift-api/: .env.example  Dockerfile  README.md  requirements.txt
SWIFT/swift-api/src/: __init__.py  config.py  main.py  models.py
SWIFT/swift-api/src/routes/: __init__.py  ingestion.py
SWIFT/swift-api/src/services/: __init__.py  ingestion_client.py
SWIFT/swift-api/src/static/: dashboard.html
SWIFT/swift-core/: README.md
SWIFT/swift-ingestion/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
SWIFT/swift-ingestion/docs/: NEWS_API_GUIDE.md
SWIFT/swift-ingestion/scripts/: init_db.py  wait-for-services.sh
SWIFT/swift-ingestion/src/: __init__.py  api.py  config.py  models.py
SWIFT/swift-ingestion/src/connectors/: __init__.py  base.py  newsapi.py  opencorporates.py  osint_search.py  registry.py
SWIFT/swift-ingestion/src/db/: __init__.py  models.py
SWIFT/swift-ingestion/src/services/: __init__.py  ingestion.py  worker.py
SWIFT/swift-ingestion/src/storage/: __init__.py  object_store.py  repository.py
SWIFT/swift-ingestion/src/utils/: __init__.py  logging.py
SWIFT/swift-ingestion/tests/: conftest.py  test_connectors.py  test_newsapi.py  test_storage.py
SWIFT/swift-modules/: README.md
